# nordility

./: .gitignore  .gitleaks-baseline.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
config/: auto-pass.example.ini  downstream-repos.toml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
scripts/: install_autoconnect_service.sh  install_web_service.sh  install_wireguard_watch_service.sh
src/nordility/: __init__.py  __main__.py  cli.py  client.py  web.py
tests/: test_auto_pass.py  test_cli.py  test_client.py  test_dyno_integration.py  test_helpers.py  test_web.py
